--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,8 @@
 
     <!-- js -->
     <script src="lib/jquery/dist/jquery.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
+  
+    <script src="lib/angular/angular.min.js"></script>
     <script src="lib/moment/moment.js"></script>
     <script src="lib/angular-moment/angular-moment.js"></script>
     <script src="lib/bootstrap/dist/js/bootstrap.js"></script>
